--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "react-express-tutorial",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.0.0",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "mongoose": "^5.3.0",
-    "nodemon": "^1.18.4",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
-  },
-  "scripts": {
-    "start": "set PORT=3000 &&  react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "react-express-tutorial",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "axios": "^0.18.0",
+        "body-parser": "^1.18.3",
+        "bootstrap": "^4.0.0",
+        "cors": "^2.8.4",
+        "express": "^4.16.3",
+        "mongoose": "^5.3.0",
+        "nodemon": "^1.18.4",
+        "react": "^16.5.2",
+        "react-dom": "^16.5.2",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "1.1.5"
+    },
+    "scripts": {
+        "start": "set PORT=3000 &&  react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    },
+    "proxy": "http://localhost:4200/"
 }
