--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "nodemon": "^1.18.4",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
+        "react-facebook-login": "^4.1.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "1.1.5"
     },
