--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "bootstrap": "^4.0.0",
         "cors": "^2.8.4",
         "express": "^4.16.3",
+        "find-or-create": "^1.1.0",
         "mongoose": "^5.3.0",
         "nodemon": "^1.18.4",
         "react": "^16.5.2",
