--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "scripts": {
         "start": "set PORT=3000 &&  react-scripts start",
+        "dev": "set PORT=3000 &&  nodemon index.js",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
